clusters/apps/base/longhorn-system/longhorn/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: longhorn
  namespace: istio-system
spec:
  hosts:
    - 'storage.${SECRET_DOMAIN}'
  gateways:
    - istio-system/main
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 80
            host: longhorn-frontend.longhorn-system.svc.cluster.local
